--- a/home.html
+++ b/home.html
@@ -11,6 +11,12 @@
 	
 	<style>
 
+	.boximg{
+
+	float:left;
+
+	}
+
 	.cover {
 
 	background: url("cover.png")no-repeat center center;
@@ -39,16 +45,48 @@
 
 	}
 
-	.square{
+	.box1{
 
 	height:auto;
 
-	width:100%;
+	width:70%;
 
 	background-color:#414143;
 
-	margin-top:10%;
+	margin:10%;
+
+	margin-left:15%;
 	
+	}
+
+	.box2{
+
+	height:400px;
+
+	width:400px;
+
+	border: solid 3px #eab221;	
+
+	}
+
+	.box3{
+
+	height:230px;
+
+	width:300px;
+
+	background-color:white;
+	
+	}
+
+	.box4{
+
+	height:200px;
+	
+	width:400px;
+
+	background-color:#eab221;
+
 	}
 
 	</style>
@@ -130,7 +168,7 @@
 
 				<div class="container">
 
-					<div class="square" style="padding:25px; text-align:center;">
+					<div class="box1" style="padding:25px; text-align:center;">
 
 						<div class="row1">
 
@@ -158,34 +196,59 @@
 			</div>
       
 		</div>
-
 		<div class="view secondview">
 
 			<div class=""container style="padding-top:90px; text-align:center;">
 
 				<div>
-
+			
 					<h6 class="display-6" style="font-family: 'Times New Roman', serif;">Plunge into the world of <br> relaxation with us<br></h6>
 
 				</div>
-
-				<div class="secondview-content1">
 		
-					<p style="max-width:80%; text-align:center; padding-left:20%; font-size:15px;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+			<div class="secondview-content1">
+
+				<p style="max-width:80%; text-align:center; padding-left:20%; font-size:15px;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+
+			</div>
+		</div>
+
+		<div class="container" style="padding-top:10%;">
+
+			<div class="view2-boxes">
+
+				<div class="boximg">
+
+					<img src="product1.png" height=400 width=auto style="margin-top:-30px;">
+
+					<div class="box2" style="margin-top:-80%; margin-left:80%;"></div>
+			
+					<div class="box3" style="margin-top:-55%; margin-left:133%">
+
+					<span style="font-size:60px; font-weight:900; padding:25px; color:#eab221">SALE<br></span>
+
+					<span style="font-size:20px; font-weight:300; padding:15px;">GET UP TO 40% OFF<br></span>
+
+					<span style="font-size:15px; padding:50px; font-weight:200">Offer of the day<br><br></span>
+
+					<span style="margin-left:50px;">
+
+						<a href="" style="text-decoration:none;">
+
+							<button style="background-color:#eab221; color:white; padding:10px; border:none;">SHOP NOW</button>
+						</a>
+
+					</span>
 
 				</div>
 
-			</div>
-
-			<div class="container" style="padding-top:50px;">
-
-				<img src="product1.png" height=300 width=auto>
-
-			</div>
+			<div>
 
 		</div>
 
-	</header>
+	</div>
+
+</header>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
